# srv

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  README.txt  __init__.py  build.gradle  client.py  commands.py  conanfile.txt  connectTest.py  connection.py  img_compression.py  install.sh  killSVR.py  main.cpp  net_commands.py  nettools.py  nettools2.py  record.py  server.py  settings.gradle  setup.py  source.py  srv.md  srv.py  srvStartCams.sh  srvStartServer.sh  srvSwapCams.sh  srvWatch.sh  srv_settings.py  startCams.sh  startSrv.sh  uninstall.sh  watch.py  watchSrv.sh
commands/: clean.sh
include/main/cpp/: server.hpp  source.hpp
pysvr/: .swp  StreamFinishedException.py  client.py  commands.py  nettools.py  server.py  srv_settings.py
resources/: cute-wolf.txt
src/: CMakeLists.txt  client.cpp  main.cpp
src/main/cpp/: CMakeLists.txt  cvtest.cpp  main.cpp  server.cpp  source.cpp
src/main/java/: Srv.java
src/main/python/: client.py
src/main/scala/: Srv.scala
src/test/cpp/: CMakeLists.txt
src/test/java/: SrvTest.java  srvTest.java
srv-py/: setup.py
srv-py/srv/: __init__.py  connectTest.py  connection.py  img_compression.py  net_commands.py  nettools.py  record.py  server.py  source.py  srv.py  srv_settings.py  startCams.py  startServer.py  swapCams.py  watch.py  winCtrl.py  windows.py  workerPool.py
test/: test-nettools2.py
